<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:icon="@drawable/smallcircle"
            android:id="@+id/nav_home"
            android:title="@string/home" />
        <item
            android:icon="@drawable/smallcircle"
            android:id="@+id/nav_search"
            android:title="@string/search" />

    </group>

    <item android:title="Profile">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:icon="@drawable/rightarrow"
                    android:id="@+id/nav_login"
                    android:title="@string/login" />
                <item
                    android:icon="@drawable/rightarrow"
                    android:id="@+id/nav_profile"
                    android:title="@string/profile" />
                <item
                    android:icon="@drawable/rightarrow"
                    android:id="@+id/nav_logout"
                    android:title="@string/logout" />
            </group>
        </menu>
    </item>

</menu>