<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Common.LoginSignup.Verifyotp"
    android:background="@color/yellow"
    android:id="@+id/otp_verify">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:padding="30dp"
       android:orientation="vertical">
       
       
       <TextView
           android:id="@+id/text_otp"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/code"
           android:textSize="100sp"
           android:textColor="@color/black"
           android:fontFamily="@font/brandongrotesquebolditalic"
           android:layout_gravity="center"
           android:textAlignment="center"/>

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/verification"
           android:textAlignment="center"
           android:textSize="24sp"
           android:textColor="@color/black"
           android:fontFamily="@font/brandongrotesquebolditalic"
           android:layout_gravity="center"/>


       <LinearLayout
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:orientation="vertical">


           <TextView
               android:layout_width="334dp"
               android:layout_height="55dp"
               android:layout_gravity="center"
               android:text="@string/otp" />

           <com.google.android.material.textfield.TextInputLayout
               android:id="@+id/input_code"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               />

       </LinearLayout>

       <Button
           android:id="@+id/Verify"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:textColor="@color/pure_white"
           android:text="@string/verify"
           android:onClick="verification"
           android:background="@color/black"
           android:layout_marginTop="30dp"/>









   </LinearLayout>
       

</ScrollView>