<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Common.LoginSignup.RetailerStartupScreen"
    android:background="@color/yellow"
    android:padding="30dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="315dp"
            android:src="@drawable/mainlogo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/retailerheading"
            android:textSize="36sp"
            android:layout_marginTop="200dp"
            android:textColor="@color/black"
            android:gravity="center"
            android:textAlignment="center"
            android:fontFamily="@font/brandongrotesque"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp">
            
            <Button
                android:id="@+id/login_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:onClick="callloginscreen"
                android:layout_weight="1"
                android:textColor="@color/pure_white"
                android:background="@color/black"
                />
            <Button
                android:id="@+id/signup_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/signuup"
                android:layout_weight="1"
                android:onClick="callsignupscreen"
                android:background="@color/black"
                android:textColor="@color/pure_white"/>


        </LinearLayout>


    </LinearLayout>

</ScrollView>


