<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".user.dashboard"
    tools:openDrawer="start"
    android:id="@+id/drawer_layout"
    >
    
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/pure_white"
        android:layout_gravity="start"
        app:menu="@menu/main_menu"
        app:headerLayout="@layout/menu_header"/>


    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white">
    
        <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">


        <ImageView
            android:id="@+id/menu_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/menulogo"
            android:layout_centerVertical="true"
            android:padding="5dp"
            android:contentDescription="TODO" />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:onClick="Retaileriew"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@color/light_blue"
            android:padding="5dp"
            android:src="@android:drawable/ic_menu_add" />



    </RelativeLayout>

        <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/app_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:fontFamily="@font/brandongrotesquebolditalic"
                    android:text="@string/logo_name"
                    android:textSize="24sp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_below="@id/app_name"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="40dp"
                    android:layout_marginBottom="20dp"
                    android:background="@color/pure_white"
                    android:elevation="8dp">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="15dp"
                        android:text=  "@string/search" />

                    <TextView
                        android:paddingLeft="40dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="15dp"
                        android:text=  "      Manipal" />


                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="15dp"
                        android:src="@android:drawable/ic_menu_search" />


                </RelativeLayout>



            </RelativeLayout>

            <!-- horizontal cards-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:background="@color/light_green"
                        android:elevation="8dp"
                        android:layout_margin="10dp">


                        <ImageView
                            android:layout_width="30dp"
                            android:onClick="gotomap"
                            android:layout_height="30dp"
                            android:src="@drawable/hotels"
                            android:layout_centerInParent="true"/>

                    </RelativeLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:text="@string/hotel"
                        android:gravity="center_horizontal"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:background="@color/light_green"
                        android:elevation="8dp"
                        android:layout_margin="10dp">


                        <ImageView
                            android:onClick="gotoairport"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:src="@drawable/airport"
                            android:layout_centerInParent="true"/>

                    </RelativeLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:text="@string/air"
                        android:gravity="center_horizontal"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:background="@color/light_green"
                        android:elevation="8dp"
                        android:layout_margin="10dp">


                        <ImageView
                            android:onClick="gotorestaurant"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:src="@drawable/restaurant"
                            android:layout_centerInParent="true"/>

                    </RelativeLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:text="@string/res"
                        android:gravity="center_horizontal"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:background="@color/light_green"
                        android:elevation="8dp"
                        android:layout_margin="10dp">


                        <ImageView
                            android:onClick="gotoshop"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:src="@drawable/shop"
                            android:layout_centerInParent="true"/>

                    </RelativeLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:text="@string/shop"
                        android:gravity="center_horizontal"/>

                </LinearLayout>

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:background="@color/light_brown">

                <LinearLayout
                    android:id="@+id/featured_background"
                    android:layout_width="160dp"
                    android:layout_height="300dp"
                    android:background="@color/light_brown"
                    android:layout_marginLeft="10dp"
                    android:orientation="vertical">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:textSize="25sp"
                        android:layout_marginTop="50dp"
                        android:text="@string/featured"
                        android:textAllCaps="true"
                        android:textColor="@color/black" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/locfeatured"/>

                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/featuredRecycler"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:layout_marginLeft="-3dp"
                    android:layout_toRightOf="@id/featured_background"
                    android:background="@color/light_blue" />


            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="30dp"
                android:padding="20dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/brandongrotesque"
                        android:text="@string/most_viewed"
                        android:textAllCaps="true"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/view_all"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"/>


                </RelativeLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/mostViewedRecycler"
                    android:layout_width="match_parent"
                    android:layout_height="140dp"/>


            </LinearLayout>


            <!--
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="30dp"
                android:padding="20dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/brandongrotesque"
                        android:text="@string/categories"
                        android:textAllCaps="true"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/view_all"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"/>


                </RelativeLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"/>

            </LinearLayout>
            -->

        </LinearLayout>
    </ScrollView>

    </LinearLayout>



</androidx.drawerlayout.widget.DrawerLayout>